--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -2,7 +2,10 @@
     package="com.whosinapp.whosinappclient"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.INTERNET">
+	    
+	</uses-permission>
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
