--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -17,18 +17,27 @@
         <activity
             android:name=".Login.MainActivity"
             android:label="@string/title_activity_main" >
-            <!-- 
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".NewUser.NewUserActivity"
+            android:label="@string/title_activity_new_user" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
-             -->
         </activity>
         <activity
-            android:name=".NewUser.NewUserActivity"
-            android:label="@string/title_activity_new_user" >
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
