--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Login.MainActivity"
+            android:name=".Login.LoginActivity"
             android:label="@string/title_activity_main" >
 
   
@@ -29,22 +29,12 @@
             android:label="@string/title_activity_new_user" >
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".homepage.HomeActivity"
             android:label="@string/title_activity_home" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name=".LogoutActivity"
+            android:name=".logout.LogoutActivity"
             android:label="@string/title_activity_logout" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
