--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -38,7 +38,11 @@
         <activity
             android:name=".createevent.CreateEvent"
             android:label="@string/title_activity_create_event" >
-
+        </activity>
+        <activity
+            android:name=".adduserstoevent.AddUsersToEventActivity"
+            android:label="@string/title_activity_add_users_to_event" >
+            
         </activity>
     </application>
 
