Update for ShowEventsForUser

--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -51,6 +51,15 @@
             android:name=".creategroup.CreateGroupActivity"
             android:label="@string/title_activity_create_group" >
         </activity>
+        <activity
+            android:name=".ShowAllEventsForUserActivity"
+            android:label="@string/title_activity_show_all_events_for_user" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
