--- a/AndroidClientProj/AndroidManifest.xml
+++ b/AndroidClientProj/AndroidManifest.xml
@@ -5,7 +5,17 @@
 
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
+    <permission android:name="com.whosinapp.whosinappclient.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="com.whosinapp.whosinappclient.permission.C2D_MESSAGE" />
+	<!-- App receives GCM messages. -->
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<!-- GCM requires a Google account. -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<!-- Keeps the processor from sleeping when a message is received. -->
+	<uses-permission android:name="android.permission.WAKE_LOCK" /> 
 
+	
+	
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
@@ -14,6 +24,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <receiver android:name="com.google.android.gcm.GCMBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
+		  <intent-filter>
+		    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+		    <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+		    <category android:name="com.whosinapp.whosinappclient" />
+		  </intent-filter>
+		</receiver>
+		<service android:name="com.whosinapp.whosinappclient.GCMIntentService" />
         <activity
             android:name=".Login.LoginActivity"
             android:label="@string/title_activity_main" >
